full spacing bug commit

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,6 @@ button{
   color: white;
   font-size: 20px;
   list-style: none;
-  height: 100vh;
 }
 .skills-container ul{
   font-family: 'Lato', sans-serif;
